--- a/.github/workflows/playwright-ci-manual.yml
+++ b/.github/workflows/playwright-ci-manual.yml
@@ -1,4 +1,4 @@
-name: Playwright CI - Manual Run
+name: Playwright Manual Test Run
 
 on:
   workflow_dispatch:
@@ -9,23 +9,31 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Install Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'
 
     - name: Install dependencies
       run: |
         npm install
-        npx playwright install  # Installs necessary browser binaries
+        npx playwright install
 
     - name: Run Playwright tests
       run: npx playwright test
 
     - name: Upload error screenshots (if any)
-      uses: actions/upload-artifact@v3 
+      if: failure()
+      uses: actions/upload-artifact@v3
       with:
         name: screenshots
         path: ./artifacts/error-screenshots
+
+    - name: Upload Playwright report (if any)
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: playwright-report
+        path: ./playwright-report
