--- a/.github/workflows/playwright-ci.yml
+++ b/.github/workflows/playwright-ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'  # Upgrade to Node.js 18 or higher to match Playwright requirements
 
     - name: Install dependencies
       run: |
@@ -30,7 +30,15 @@ jobs:
       run: npx playwright test
 
     - name: Upload error screenshots (if any)
-      uses: actions/upload-artifact@v3 
+      if: failure()
+      uses: actions/upload-artifact@v3  # Updated to v3
       with:
         name: screenshots
         path: ./artifacts/error-screenshots
+
+    - name: Upload Playwright report (if any)
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: playwright-report
+        path: ./pla
