--- a/.github/workflows/playwright-ci.yml
+++ b/.github/workflows/playwright-ci.yml
@@ -19,19 +19,23 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'  # Upgrade to Node.js 18 or higher to match Playwright requirements
+        node-version: '18'
 
     - name: Install dependencies
       run: |
         npm install
-        npx playwright install  # Installs necessary browser binaries
+        sudo chown -R $(whoami) ./node_modules  # Ensure correct permissions for node_modules
+
+    - name: Install Playwright browsers
+      run: |
+        sudo npx playwright install  # Run with sudo to ensure the Playwright binary installs correctly
 
     - name: Run Playwright tests
       run: npx playwright test
 
     - name: Upload error screenshots (if any)
       if: failure()
-      uses: actions/upload-artifact@v3  # Updated to v3
+      uses: actions/upload-artifact@v3
       with:
         name: screenshots
         path: ./artifacts/error-screenshots
@@ -41,4 +45,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: playwright-report
-        path: ./pla
+        path: ./playwright-report
