--- a/.github/workflows/playwright-ci-manual.yml
+++ b/.github/workflows/playwright-ci-manual.yml
@@ -4,40 +4,39 @@ on:
   workflow_dispatch:  # This allows manual triggering from GitHub UI
 
 jobs:
-  build:
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  
 
-    - name: Install Node.js
-      uses: actions/setup-node@v3
+    - name: Setup Node.js
+      uses: actions/setup-node@v4  
       with:
         node-version: '18'
 
     - name: Install dependencies
-      run: |
-        npm install
-        sudo chown -R $(whoami) ./node_modules  # Ensure correct permissions for node_modules
+      run: npm ci  # Clean install using npm ci
 
-    - name: Install Playwright browsers
-      run: |
-        sudo npx playwright install  # Run with sudo to ensure the Playwright binary installs correctly
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps  # Playwright's recommended way to install dependencies
 
     - name: Run Playwright tests
       run: npx playwright test
 
     - name: Upload error screenshots (if any)
-      if: failure()
-      uses: actions/upload-artifact@v3
+      if: failure()  # Only upload screenshots on failure
+      uses: actions/upload-artifact@v4  
       with:
         name: screenshots
-        path: ./artifacts/error-screenshots
+        path: artifacts/error-screenshots
 
     - name: Upload Playwright report (if any)
-      if: always()
-      uses: actions/upload-artifact@v3
+      if: always()  # Always upload the report
+      uses: actions/upload-artifact@v4  
       with:
         name: playwright-report
-        path: ./playwright-report
+        path: playwright-report
+        retention-days: 30  # Keep the report for 30 days
